@@ -50,7 +50,7 @@ Try installing locally artifacts with activation apache-release profile. The fol
 export JAVA_HOME=`/usr/libexec/java_home -v 1.8`
 
 # Try to create artifacts
-export MAVEN_OPTS=-XX:MaxPermSize=256m
+export MAVEN_OPTS=-XX:MaxMetaspaceSize=256m
 
 # (Optional) Workaround for SSL error `Received fatal alert: protocol_version`
 export MAVEN_OPTS="$MAVEN_OPTS -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2"
